# cursor-harness

./: .gitignore  ARCHITECTURE_DECISION.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  CURSOR_HARNESS_FIX_PLAN.md  DESIGN.md  INSTALL.md  LICENSE  MANIFEST.in  MODES.md  QUICK_START.md  README.md  RELEASE_NOTES_v2.5.0.md  REPLICATION_CHECKLIST.md  autonomous_backlog_runner.py  cli.py  core.py  cursor_agent_runner.py  cursor_autonomous_agent.py  output_formatter.py  progress.py  pyproject.toml  requirements.txt  security.py  setup.py
cursor_harness/: __init__.py  anthropic_client.py  autonomous_backlog_orchestrator.py  autonomous_backlog_runner.py  azure_devops_integration.py  browser_cleanup.py  cli.py  core.py  cursor_agent_runner.py  cursor_autonomous_agent.py  cursor_cli_client.py  cursor_harness_cli.py  cursor_mcp_client.py  cursor_setup.py  hooks.py  infrastructure_validator.py  loop_detector.py  multi_agent_mode.py  progress.py  project_scaffolder.py  prompts.py  regression_tester.py  retry_manager.py  setup_mcp.py  single_agent_runner.py  tools.py
cursor_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cursor_harness/checkpoint/: __init__.py  checkpoint_manager.py
cursor_harness/executor/: __init__.py  cursor_executor.py
cursor_harness/infra/: healer.py
docs/: AUTONOMOUS_BACKLOG_MODE.md  MULTI_AGENT_WORKFLOW_MODE.md
executor/: claude_executor.py
infra/: __init__.py
modes/: backlog.py
prompts/: app_spec_example.txt  bugfix_mode_prompt.md  coding_prompt.md  initializer_prompt.md  project_structure.md
specs/: autograph_foundation_complete_fix.txt  autograph_hybrid_validation.txt  autograph_v2.1_test.txt
tests/: test_adaptive_prompting.py  test_auto_recovery.py  test_canary_session.py  test_checkpoint_manager.py  test_dependency_graph.py  test_git_analyzer.py  test_multi_agent.py  test_performance_profiler.py  test_session_analytics.py  test_simple.py  test_telemetry_loop.py
validators/: secrets_scanner.py
(+53 files in other folders)
