[project]
name = "cursor-harness"
version = "3.2.1"
description = "Simple, reliable autonomous coding harness"
authors = [{name = "Nirmalarya Podder"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.39.0",
]

[project.scripts]
cursor-harness = "cursor_harness.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

